# ragdag

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  config.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: dev.yml  devtests.yml
app/: config.py  config.yaml  database.py  logconfig.py  main.py  pipe.py  runner.py  schemas.py  settings.py  utils.py
app/consolidate/: __init__.py  consolidate.py
app/generate/: generate.py
app/rerank/: __init__.py  rerank.py
app/retrieve/: __init__.py  retrieve.py
app/rewrite/: __init__.py  rewrite.py
app/security/: __init__.py  security.py
app/store/: qdrant.py
examples/: run.py
openapi/: generate-openapi.py  openapi.yaml
scripts/: fillvs.py  filter_data.sh  monitor_datababse.py
tests/: conftest.py  stubs.py  test_data.json  test_end_to_end.py  test_pipe.py  test_utils.py
tests/consolidate/: test_consolidate.py
tests/generate/: test_generate.py
tests/retrieve/: test_retrieve.py
tests/security/: test_security.py
